floats and doubles work (but not ints longs bytes etc)